# essence-of-live-coding

./: .travis.yml  cabal.project.8.10.7.freeze  cabal.project.9.0.2.freeze  stack-lts-14.27.yaml  stack-lts-16.31.yaml  stack.8.10.7.yaml  stack.8.8.4.yaml  stack.9.0.2.yaml  stack.yaml
.github/workflows/: ci.yml
essence-of-live-coding/: essence-of-live-coding.cabal
essence-of-live-coding-PortMidi/src/LiveCoding/: PortMidi.hs
essence-of-live-coding-frp-test/: LICENSE  essence-of-live-coding-frp-test.cabal
essence-of-live-coding-frp-test/app/: Main.hs
essence-of-live-coding-frp-test/src/LiveCoding/FRP/: Test.hs
essence-of-live-coding-frp-test/test/: Main.hs
essence-of-live-coding-frp/src/LiveCoding/: FRP.hs
essence-of-live-coding/src/LiveCoding/: CellExcept.lhs  HandlingState.hs
essence-of-live-coding/src/LiveCoding/Cell/: Util.hs
essence-of-live-coding/test/Handle/: LiveProgram.hs
