name:                essence-of-live-coding-frp-test
version:             0.1.0
description:         Test framework for essence-of-live-coding-frp using Linear Temporal Logic
homepage:            https://github.com/turion/essence-of-live-coding
license:             BSD3
license-file:        LICENSE
author:              Iván Perez, Manuel Bärenz, and Miguel Negrão
maintainer:          miguel.negrao@friendlyvirus.org
category:            FRP, Live coding Bindings
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LiveCoding.FRP.Test
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding
    , essence-of-live-coding-frp >= 0.1.0 && < 0.2
    , QuickCheck >= 2.12 && < 3
    , random >= 1.1 && < 2         
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-orphans

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: 
      test
  build-depends:
      base >= 4.11 && < 5
    , essence-of-live-coding-frp-test  
    , essence-of-live-coding-frp >= 0.1.0 && < 0.2
    , essence-of-live-coding >= 0.2.6 && < 3
    , transformers >= 0.5
    , test-framework >= 0.8
    , test-framework-quickcheck2 >= 0.3
    , QuickCheck >= 2.12
    , test-framework-hunit >= 0.3
    , HUnit >= 1.3 && < 2
    , arrow-utils >= 0.1.1 && < 0.2
    , random >= 1.1 && < 2
  default-language:    Haskell2010

executable essence-of-live-coding-frp-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , transformers
                     , essence-of-live-coding-frp >= 0.1.0 && < 0.2
                     , arrow-utils >= 0.1.1 && < 0.2
                     , essence-of-live-coding >= 0.2.5 && < 0.3
                     , essence-of-live-coding-gloss
                     , gloss

  ghc-options:      -Wall -Wno-name-shadowing -Wno-unused-do-bind -Wno-orphans                 

source-repository head
  type:     git
  location: git@github.com:turion/essence-of-live-coding.git
